<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.udacity.project4.locationreminders.savereminder.SaveReminderViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
       <fragment
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:id="@+id/map_fragment"
           android:name="com.google.android.gms.maps.SupportMapFragment"
           tools:context=".locationreminders.savereminder.selectreminderlocation.SelectLocationFragment"
           app:layout_constraintTop_toTopOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintBottom_toTopOf="@+id/save_button"  />

        <TextView
            android:id="@+id/save_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#E91E63"
            android:gravity="center"
            android:text="@string/save"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="TextContrastCheck"
           app:layout_constraintHorizontal_bias="0.0"
            android:textAlignment="center"
            android:textColor="#FFFFFF" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
